--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/BookingView.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/BookingView.xaml
@@ -66,7 +66,7 @@
             <Style x:Key="SearchTextStyle" 
                    TargetType="Entry">
                 <Setter Property="FontFamily"
-                    Value="{StaticResource PoppinsRegular}" />
+                    Value="PoppinsRegular" />
                 <Setter Property="FontSize"
                     Value="{StaticResource MidMediumSize}" />
                 <Setter Property="BackgroundColor" 
