--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/Templates/UwpNotificationItemTemplate.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/Templates/UwpNotificationItemTemplate.xaml
@@ -53,16 +53,16 @@
                 <RowDefinition Height="6*" />
                 <RowDefinition Height="20" />
             </Grid.RowDefinitions>
-            <ffimageloading:CachedImage
+            <Image
                 Grid.RowSpan="3"
                 Aspect="AspectFill">
-                <ffimageloading:CachedImage.Source>
+                <Image.Source>
                     <OnPlatform x:TypeArguments="ImageSource">
                         <On Platform="Android, iOS" Value="hero_image" />
                         <On Platform="UWP" Value="Assets/hero_image.png" />
                     </OnPlatform>
-                </ffimageloading:CachedImage.Source>
-            </ffimageloading:CachedImage>
+                </Image.Source>
+            </Image>
             <Grid 
                 Grid.Row="0"
                 Grid.RowSpan="2"
@@ -82,7 +82,7 @@
                         Grid.Row="0"
                         Text="Notifications" 
                         Style="{StaticResource NotificationsStyle}"/>
-                    <ffimageloading:CachedImage
+                    <Image
                         Grid.Row="1"
                         Source="{Binding Type, Converter={StaticResource NotificationTypeToIconConverter}}"
                         Style="{StaticResource NotificationIconStyle}"/>
