--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/UwpHomeView.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/UwpHomeView.xaml
@@ -66,7 +66,7 @@
                 <Setter Property="FontSize" 
                         Value="{StaticResource MidMediumSize}" />
                 <Setter Property="FontFamily"
-                        Value="{StaticResource FiraSansRegular}" />
+                        Value="FiraSansRegular" />
                 <Setter Property="LineBreakMode"
                         Value="WordWrap" />
             </Style>
@@ -253,16 +253,16 @@
                         <!-- BE GREEN -->
                         <Grid
                             Grid.Column="4">
-                            <ffimageloading:CachedImage  
+                            <Image
                                 Aspect="AspectFit"
                                 Margin="60">
-                                <ffimageloading:CachedImage.Source>
+                                <Image.Source>
                                     <OnPlatform x:TypeArguments="ImageSource">
                                         <On Platform="Android, iOS" Value="be_green" />
                                         <On Platform="UWP" Value="Assets/be_green.png" />
                                     </OnPlatform>
-                                </ffimageloading:CachedImage.Source>
-                            </ffimageloading:CachedImage>
+                                </Image.Source>
+                            </Image>
                             <Label      
                                 Text="{extensions:Translate BeGreen}"
                                 Style="{StaticResource BigChartTextStyle}"/>
@@ -346,16 +346,16 @@
                             <Grid 
                                 Grid.Column="1"
                                 Grid.Row="1">
-                                <ffimageloading:CachedImage                                
+                                <Image                              
                                     Aspect="AspectFit"
                                     Margin="12, 6">
-                                    <ffimageloading:CachedImage.Source>
+                                    <Image.Source>
                                         <OnPlatform x:TypeArguments="ImageSource">
                                             <On Platform="Android, iOS" Value="be_green" />
                                             <On Platform="UWP" Value="Assets/be_green.png" />
                                         </OnPlatform>
-                                    </ffimageloading:CachedImage.Source>
-                                </ffimageloading:CachedImage>
+                                    </Image.Source>
+                                </Image>
                                 <Label 
                                     Text="{extensions:Translate BeGreen}"
                                     Style="{StaticResource SmallChartTextStyle}"/>
@@ -372,17 +372,17 @@
                             <RowDefinition Height="8*" />
                             <RowDefinition Height="2*" />
                         </Grid.RowDefinitions>
-                        <ffimageloading:CachedImage 
+                        <Image 
                             Grid.Row="0"
                             Grid.RowSpan="2"
                             Aspect="AspectFill">
-                            <ffimageloading:CachedImage.Source>
+                            <Image.Source>
                                 <OnPlatform x:TypeArguments="ImageSource">
-                                    <On Platform="Android, iOS" Value="img_1" />
+                                    <On Platform="Android, iOS" Value="img_1.png" />
                                     <On Platform="UWP" Value="Assets/img_5.png" />
                                 </OnPlatform>
-                            </ffimageloading:CachedImage.Source>
-                        </ffimageloading:CachedImage>
+                            </Image.Source>
+                        </Image>
                         <Grid   
                             Grid.Row="1"
                             BackgroundColor="{StaticResource OrangeColor}">
@@ -405,18 +405,18 @@
                             <RowDefinition Height="8*" />
                             <RowDefinition Height="2*" />
                         </Grid.RowDefinitions>
-                        <ffimageloading:CachedImage  
+                        <Image  
                             Grid.Row="0"
                             Grid.RowSpan="2"
                             Source="img_2" 
                             Aspect="AspectFill">
-                            <ffimageloading:CachedImage.Source>
+                            <Image.Source>
                                 <OnPlatform x:TypeArguments="ImageSource">
                                     <On Platform="Android, iOS" Value="img_2" />
                                     <On Platform="UWP" Value="Assets/img_4.png" />
                                 </OnPlatform>
-                            </ffimageloading:CachedImage.Source>
-                        </ffimageloading:CachedImage>
+                            </Image.Source>
+                        </Image>
                         <Grid   
                             Grid.Row="1"
                             BackgroundColor="{StaticResource GreenColor}">
@@ -472,19 +472,19 @@
                                     Command="{Binding SuggestionsCommand}" />
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
-                        <ffimageloading:CachedImage  
+                        <Image
                             x:Name="RestaurantImage"
                             Grid.Column="1"
                             Grid.Row="0"
                             Grid.RowSpan="3"
                             Aspect="AspectFill">
-                            <ffimageloading:CachedImage.Source>
+                            <Image.Source>
                                 <OnPlatform x:TypeArguments="ImageSource">
                                     <On Platform="Android, iOS" Value="img_3" />
                                     <On Platform="UWP" Value="Assets/img_6.png" />
                                 </OnPlatform>
-                            </ffimageloading:CachedImage.Source>
-                        </ffimageloading:CachedImage>
+                            </Image.Source>
+                        </Image>
                         <Grid   
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
@@ -542,19 +542,19 @@
                                     Command="{Binding SuggestionsCommand}" />
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
-                        <ffimageloading:CachedImage  
+                        <Image  
                             x:Name="MoreInfoImage"
                             Grid.Column="1"
                             Grid.Row="0"
                             Grid.RowSpan="3"
                             Aspect="AspectFill">
-                            <ffimageloading:CachedImage.Source>
+                            <Image.Source>
                                 <OnPlatform x:TypeArguments="ImageSource">
                                     <On Platform="Android, iOS" Value="img_3" />
                                     <On Platform="UWP" Value="Assets/img_3.png" />
                                 </OnPlatform>
-                            </ffimageloading:CachedImage.Source>
-                        </ffimageloading:CachedImage>
+                            </Image.Source>
+                        </Image>
                         <Grid   
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
