--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/HomeView.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/HomeView.xaml
@@ -3,14 +3,12 @@
     x:Name="Self"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="SmartHotel.Clients.Core.Views.HomeView" 
-    xmlns:ctrls="clr-namespace:SmartHotel.Clients.Core.Controls"
-    xmlns:carousel="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions"
+    x:Class="SmartHotel.Clients.Core.Views.HomeView"
     xmlns:templates="clr-namespace:SmartHotel.Clients.Core.Views.Templates"
-    xmlns:ffimageloading="clr-namespace:FFImageLoading.Maui;assembly=FFImageLoading.Compat.Maui"
-    xmlns:controls="clr-namespace:SmartHotel.Clients.Core.Controls"     
     xmlns:extensions="clr-namespace:SmartHotel.Clients.Core.MarkupExtensions"
-    xmlns:microcharts="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui" 
+    xmlns:microcharts="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    ios:Page.UseSafeArea="False" 
     BackgroundColor="{StaticResource BackgroundColor}">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -130,7 +128,7 @@
         </ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid>
+        <Grid IgnoreSafeArea="True">
             <Grid   
                 AutomationId="home"
                 RowSpacing="0">
